<resources>
    <string name="app_name">MyLevering</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_name">Jay Hopkins</string>
    <string name="nav_header_account">View Account</string>
    <string name="my_order">My Order</string>
    <string name="kitchens">Kitchens</string>
    <string name="past_orders">Past Orders</string>
    <string name="payment">Payment</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="menu_item">Menu Item</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filled_circle">Filled circle</string>
    <string name="wok">Wok</string>
    <string name="butterfly">Butterfly</string>
    <string name="fresh">Fresh</string>
    <string name="toastee">Toastee</string>
    <string name="go">GO</string>
    <string name="grill">Grill</string>
    <string name="base">Base</string>
    <string name="spreads">Spreads (max 3)</string>
    <string name="toppings">Toppings (max 5)</string>
    <string name="protein">Protein</string>
    <string name="dressing">Dressing</string>
    <string name="order">Order</string>
    <string name="freshLabel">Fresh</string>

    <string name="favs">Filter by Favorites</string>
    <string name="reorder">Re-Order</string>

    <string name="jcard">J-Card</string>
    <string name="jcard_balance"> <b>J-Cash Balance: </b>$75</string>
    <string name="jcard_meal_plan"> <b>Meal Plan: </b> 14 Meal Swipes per Week</string>
    <string name="jcard_dining_balance"> <b>Dining Dollars Balance: </b>$150</string>

    <string name="menu_option_title">Menu Item Title</string>
    <string name="menu_option_calories">Calories</string>
    <string name="menu_option_price">Price</string>
    <string name="menu_option_ingredients">Ingredients</string>
    <string name="menu_option_nutrition">Nutrition Info</string>
    <string name="confirm_pick_up">Pick-up in:</string>
    <string name="confirm_payment_method">Payment Method</string>
    <string name="confirm_total">Total</string>
    <string name="confirm_button_text">Submit Order</string>
    <string name="confirm_order_label">Confirm Order</string>

    <string name="butterfly_description">Butterfly Tacos y Tortas features the authentic flavors of Mexican street cuisine and the culinary prowess of renowned chef José Andrés</string>
    <string name="butterfly_instructions">Special Instructions</string>
    <string name="butterfly_customize">Add note...</string>
    <string name="unsent">Waiting for Order to send...</string>
    <string name="sent">Order sent to kitchen!</string>
    <string name="in_queue">Order accepted by kitchen!</string>
    <string name="in_progress">Order is being prepared!</string>
    <string name="complete">Your order is ready for pick-up!</string>
    <string name="mark_order">Mark order as picked up</string>
    <string name="price">$</string>
    <string name="title_activity_login">Login to MyLevering</string>
    <string name="prompt_email">JHU Email</string>
    <string name="prompt_password">Password (at least 6 characters)</string>
    <string name="prompt_password_short">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Must be JHU email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_title">Welcome to MyLevering</string>
    <string name="welcome_desc">Order ahead to grab-and-go!</string>
    <string name="welcome_login">Log In</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="welcome_signup">Sign up</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_password_again">Re-enter password</string>
    <string name="sign_out">Sign Out</string>
    <string name="logout">Log Out</string>
    <string name="settings_notification_title">Notification Preferences</string>
    <string name="notification_preferences">notification preferences</string>
    <string name="out_of_stock">This item is not available</string>
    <string name="warning_shellfish">This item contains shellfish</string>
    <string name="warning_vegan">This item is not vegan</string>
    <string name="warning_vegetarian">This item is not vegetarian</string>
    <string name="warning_kosher">This item is not Kosher</string>
    <string name="warning_halal">This item is not Halal</string>
    <string name="warning_dairy">This item contains dairy</string>
    <string name="warning_gluten">This item contains gluten</string>
    <string name="warning_nut">This item contains nuts</string>
    <string name="dietary_restrictions_help">Select  dietary restrictions from list below.</string>
    <string name="dietary_restrictions_title">Dietary Restrictions</string>
    <string name="prefs_gluten">Gluten-Free</string>
    <string name="prefs_dairy">Dairy-Free</string>
    <string name="prefs_kosher">Kosher</string>
    <string name="prefs_halal">Halal</string>
    <string name="prefs_vegan">Vegan</string>
    <string name="prefs_nut">Nut Allergy</string>
    <string name="prefs_shellfish">Shellfish Allergy</string>
    <string name="prefs_vegetarian">Vegetarian</string>
    <string name="prefs_order_sent">Order is sent</string>
    <string name="prefs_in_queue">Order is in queue</string>
    <string name="prefs_in_progress">Order is in progress</string>
    <string name="prefs_order_complete">Order is complete</string>
    <string name="prefs_notification_help">Notify me when...</string>
</resources>
