<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="64dp">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:background="@color/colorGray"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Jcard Image of Jay Hopkins"
            app:srcCompat="@drawable/jcard" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/payment_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginBottom="5dp"
                android:text="@string/jcard"
                android:textColor="#E1FFFFFF"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/jcard_meal_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30sp"
                android:layout_marginBottom="5dp"
                android:text="@string/jcard_meal_plan"
                android:textColor="#E1FFFFFF" />

            <TextView
                android:id="@+id/jcard_dining_dollars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30sp"
                android:layout_marginBottom="5dp"
                android:text="@string/jcard_dining_balance"
                android:textColor="#E1FFFFFF" />

            <TextView
                android:id="@+id/jcard_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30sp"
                android:layout_marginBottom="5dp"
                android:text="@string/jcard_balance"
                android:textColor="#E1FFFFFF" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>