<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:background="@drawable/nav_bar_background">

    <ImageView
        android:id="@+id/id_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="57dp"
        android:layout_marginBottom="37dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_menu_account" />

    <TextView
        android:id="@+id/id_name"
        android:layout_width="142dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:paddingTop="8dp"
        android:text="@string/nav_header_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/id_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="17dp"
        android:text="@string/nav_header_account"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_image"
        app:layout_constraintTop_toBottomOf="@+id/id_name" />

</androidx.constraintlayout.widget.ConstraintLayout>